# exbot

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain
.github/: dependabot.yml
.github/workflows/: rust.yml
exbot/: .env.example  Cargo.toml
exbot-app/: package.json
exbot-app/src/: App.vue  generatedKLineDataList.ts  style.css
exbot-app/src-tauri/: Cargo.toml  tauri.conf.json
exbot-app/src/components/: KLine.vue
exbot-monitor/: Cargo.toml
exbot-py/: .env.example  .gitignore  Makefile  README.md  backtesting.py  bot.py  chart.py  config.py  download.py  requirements.txt
exbot-py/charts/: position.py  position_price.py
exbot-py/configs/: config.toml.example
exbot-py/core/: candle.py  chart.py  logger.py
exbot-py/exchanges/: bitget.py  exchange.py
exbot-py/scripts/: chart_position.sh  chart_position_price.sh
exbot-py/strategies/: ichiv1.py  istrategy.py  macd.py  manager.py  strategy.py
exbot-py/tests/: ohlcv.json  test_bitget.py  test_pd.py
exbot/examples/: kline.rs
exbot/migrations/mockex/: 20230920021716_create_table_mockex_order.sql
exbot/src/: error.rs  lib.rs
exbot/src/apis/: mod.rs
exbot/src/apis/spot/: kline.rs  mod.rs
exbot/src/client/: binance.rs  mod.rs
exbot/src/config/: ext_async.rs  mockex.rs  mod.rs
exbot/src/services/: mockex_service.rs  mod.rs
exbot/src/storage/: cresedb.rs  mod.rs
pymodules/mockex/: Cargo.toml  pyproject.toml
pymodules/mockex/src/: lib.rs  mockex.rs
