[package]
name = "exbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
ceresdb-client = { git="https://github.com/CeresDB/ceresdb-client-rs.git", tag = "v1.0.2" }
tokio = { version = "1.23.0", features = ["full"] }
chrono = "0.4.26"
async-trait = "0.1.60"
tracing = "0.1.37"
tracing-subscriber = { version="0.3.16", features = ["env-filter"] }
once_cell = "1.16.0"
toml = "0.5.10"
home = "0.5.4"

[features]
default = ["async_config"]
async_config=[]
