[package]
name = "exbot"
version = "0.1.0"
edition = "2021"
authors = ["wisarmy <wisarmy@gmail.com>"]
license = "MIT"
description = "exbot for rust"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["full"] }
chrono = "0.4.26"
async-trait = "0.1.60"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
once_cell = "1.16.0"
toml = "0.5.10"
home = "0.5.4"
sqlx = { version = "0.7.1", features = [
    "sqlite",
    "runtime-tokio",
    "tls-rustls",
] }
axum = "0.6.20"
tower = "0.4.13"
tower-http = { version = "0.2", features = ["map-request-body", "util", "cors"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
utoipa = { version = "4.0.0", features = ["axum_extras"] }
utoipa-redoc = { version = "1.0.0", features = ["axum"] }

[features]
default = ["async_config"]
async_config = []

[[bin]]
name = "mockex"
path = "src/bin/mockex.rs"
[[bin]]
name = "exbot"
path = "src/bin/main.rs"
